@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-07-19T08:27:45Z",
-  "count_outdated" : 680,
-  "uniques_outdated" : 353,
-  "count" : 702,
+  "timestamp" : "2022-07-19T16:35:57Z",
+  "count_outdated" : 682,
+  "uniques_outdated" : 354,
+  "count" : 703,
   "uniques" : 366,
   "clones" : [
-    {
-      "timestamp": "2022-07-05T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 2 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ]
-    },
     {
       "timestamp": "2022-07-06T00:00:00Z",
       "count": 2,
